--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
   <body>
     <div class="body-content">
       <div class="start-screen">
-        <h1>Battleship</h1>
-        <button class="btn" id="start-btn">Start</button>
+        <h1>BATTLESHIP</h1>
+        <button class="btn btn-red" id="start-btn">Start Game</button>
       </div>
       <div class="gameplay">
         <div class="board-container">
-          <h2>Player</h2>
+          <h2>You</h2>
           <div id="player-board"></div>
           <div id="player-alert"></div>
         </div>
@@ -25,13 +25,29 @@
       </div>
     </div>
     <dialog id="place-ships">
-      <div></div>
-      <button class="btn" id="randomize">Randomize</button>
-      <button class="btn" id="play-btn">Play</button>
+      <div>
+        <h2>PLACE YOUR SHIPS</h2>
+        <div>
+          <div class="row">
+            <div id="place-ships-board"></div>
+            <div id="ships-container"></div>
+          </div>
+          <div class="row">
+            <button class="btn btn-grey" id="randomize-btn">Randomize</button>
+            <button class="btn btn-grey" id="clear-btn">Clear</button>
+            <button class="btn btn-grey" id="orientation-btn">
+              Flip Vertical
+            </button>
+          </div>
+        </div>
+        <button class="btn btn-red" id="play-btn">Begin</button>
+      </div>
     </dialog>
     <dialog id="endgame">
-      <h1></h1>
-      <button class="btn" id="play-again">Play Again</button>
+      <div>
+        <h1></h1>
+        <button class="btn" id="play-again">Play Again</button>
+      </div>
     </dialog>
   </body>
 </html>
