Fix endgame modal styling

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
       </div>
     </dialog>
     <dialog id="endgame">
-      <div>
-        <h1></h1>
-        <button class="btn" id="play-again">Play Again</button>
+      <div class="col">
+        <h2></h2>
+        <button class="btn btn-red" id="play-again">Play Again</button>
       </div>
     </dialog>
   </body>
